Time: 54 ms (91.18%), Space: 52.3 MB (22.56%) - LeetHub